--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mantine/core": "^7.8.0",
     "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "connect-route": "^0.1.5",
     "joi": "^17.12.3",
